# insurance-distributional-glm

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  run_tests_databricks.py
.github/workflows/: ci.yml  docs.yml
benchmarks/: benchmark_insurance_distributional_glm.py
docs/api/: index.html  insurance_distributional_glm.html  search.js
docs/api/insurance_distributional_glm/: families.html
notebooks/: benchmark_distributional_glm.py  demo_gamlss_insurance.py  quickstart.ipynb  run_tests.py  submit_test_job.py
src/insurance_distributional_glm/: __init__.py  diagnostics.py  fitting.py  model.py  selection.py
src/insurance_distributional_glm/families/: __init__.py  base.py  continuous.py  count.py
tests/: test_families.py  test_links.py  test_model.py  test_selection_diagnostics.py
