[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insurance-distributional-glm"
version = "0.1.3"
description = "GAMLSS (Generalised Additive Models for Location, Scale and Shape) for insurance pricing in Python"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Burning Cost", email = "pricing.frontier@gmail.com" }
]
keywords = ["insurance", "actuarial", "GAMLSS", "distributional regression", "GLM"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Office/Business :: Financial",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "polars>=1.0",
]

[project.optional-dependencies]
plots = ["matplotlib>=3.7"]
pandas = ["pandas>=2.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/burning-cost/insurance-distributional-glm"
Repository = "https://github.com/burning-cost/insurance-distributional-glm"
Issues = "https://github.com/burning-cost/insurance-distributional-glm/issues"
Documentation = "https://github.com/burning-cost/insurance-distributional-glm#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/insurance_distributional_glm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
